--- a/blog.css
+++ b/blog.css
@@ -43,7 +43,7 @@ body {
 }
 
 .card h2 {
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   margin: 0;
   flex-grow: 1;
@@ -76,4 +76,80 @@ body {
 
 .light-green {
   background-color: #A3CFBB;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  border: 1px solid #E9ECEF;
+  border-radius: 4px;
+  overflow: hidden;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  font-family: 'Inter', sans-serif;
+  width: fit-content;
+  margin-right: 1rem
+}
+
+.page-item {
+  text-align: center;
+}
+
+.page-link {
+  display: block;
+  border-right: 1px solid #E9ECEF;
+  color: #6C757D;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 500;
+  background-color: white;
+  transition: background-color 0.2s;
+  text-decoration: none;
+}
+
+.page-link:hover {
+  background-color: #7749F8;
+  color: white;
+}
+
+.pagination-bg {
+  background-color: #F8F9FA;
+  border-radius: 8px;
+  height: 50px;
+  padding-top: 1rem;
+  margin-top: 3rem;
+}
+
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  padding: 2rem;
+}
+
+.btn {
+  background: #7749F8;
+  padding: 0.5rem 0.5rem;
+  border-radius: 6px;
+  font-size: 15px;
+  font-weight: normal;
+  margin-right: 0.5rem;
+  color: white;
+}
+
+.btn {
+  border-radius: 6px;
+  padding: 0.5rem;
+}
+
+.btn-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 3rem;
+}
+
+.btn:hover {
+  background-color: #5227CC;
+  color: white;
 }
