--- a/style3.css
+++ b/style3.css
@@ -65,6 +65,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
+    background-color: #E9ECEF;
+    border-radius: 1000px;
   }
 
   .card-img {
@@ -92,11 +94,11 @@
   }
   
   .tag {
-    background-color: #e0d9f8;
-    color: #5e2cf2;
+    background-color: #7749F8;
+    color: #ffffff;
     font-size: 0.8rem;
     font-weight: 600;
     padding: 0.3rem 0.8rem;
-    border-radius: 20px;
+    border-radius: 4px;
   }
   
