--- a/blog.css
+++ b/blog.css
@@ -5,6 +5,7 @@ body {
   padding: 2rem;
 }
 
+
 .card-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -54,27 +55,27 @@ body {
   font-weight: 500;
   align-self: flex-end;
   color: black;
-  font-size: 21px;
+  font-size: 15px;
 }
 
 /* Background colors */
-.light-blue {
+.card.light-blue {
   background-color: #9EC5FE;
 }
 
-.light-purple {
+.card.light-purple {
   background-color: #C29FFA;
 }
 
-.light-pink {
+.card.light-pink {
   background-color: #EFADCE;
 }
 
-.light-orange {
+.card.light-orange {
   background-color: #FECBA1;
 }
 
-.light-green {
+.card.light-green {
   background-color: #A3CFBB;
 }
 
@@ -85,11 +86,11 @@ body {
   border-radius: 4px;
   overflow: hidden;
   list-style: none;
-  padding: 0;
   margin: 0 auto;
   font-family: 'Inter', sans-serif;
   width: fit-content;
-  margin-right: 1rem
+  margin-right: 1rem;
+  margin-bottom: 2rem;
 }
 
 .page-item {
@@ -121,35 +122,16 @@ body {
   margin-top: 3rem;
 }
 
-body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  padding: 2rem;
+.btn-primary.le-bouton {
+  
+  --bs-btn-bg: #7749F8;
+      --bs-btn-border-color: none;
+  --bs-btn-hover-bg: #5227CC;
+
 }
 
-.btn {
-  background: #7749F8;
-  padding: 0.5rem 0.5rem;
-  border-radius: 6px;
-  font-size: 15px;
-  font-weight: normal;
-  margin-right: 0.5rem;
-  color: white;
-}
-
-.btn {
-  border-radius: 6px;
-  padding: 0.5rem;
-}
-
-.btn-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-bottom: 3rem;
-}
-
-.btn:hover {
-  background-color: #5227CC;
-  color: white;
+nav a {
+    text-decoration: none;
+    margin-right: 0px;
+    font-weight: bold;
 }
