--- a/styles.css
+++ b/styles.css
@@ -418,3 +418,10 @@ margin-left: 8px;
   background-color: #5B11D4; /* fond violet si besoin */
   padding: 10px;
 }
+
+
+.modal-backdrop.show {
+  backdrop-filter: blur(6px);
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
